--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn test.ts",
-    "start": "ts-node test.ts"
+    "dev": "ts-node-dev --respawn test/index.ts",
+    "start": "ts-node test/index.ts"
   },
   "repository": {
     "type": "git",
